--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "busboy": "^0.3.1",
+    "carbone": "^1.2.1",
     "connect-memcached": "^1.0.0",
     "connect-session-firebase": "^5.13.0",
     "consolidate": "^0.15.1",
